force-app/main/default/objects/SFL5_Projects__c/fields/Delivery_Value__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Value__c</fullName>
    <description>The value of this project in terms of delivery.</description>
    <inlineHelpText
  >The value of this project in terms of delivery.</inlineHelpText>
    <label>Delivery Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>