force-app/main/default/objects/SFL5_Projects__c/fields/Demand_Gen_Guides__c.field-meta.xml
<CustomField>
    <fullName>Demand_Gen_Guides__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic2.sharepoint.com/:o:/r/teams/CustomMedia/Shared%20Documents/DEMAND%20GEN%20RESOURCES/Demand%20Gen%20Process%20Docs/Demand%20Gen%20OneNote?d=w61f4b8f0b6254b21ac30b1340a303e9e&amp;csf=1&amp;web=1&amp;e=8sxk8t&quot;, &quot;Demand Gen Guides&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demand Gen Guides</label>
    <type>Text</type>
</CustomField>