force-app/main/default/objects/SFL5_Projects__c/fields/DEN_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>DEN_Contract_End_Date__c</fullName>
    <formula>Client__r.DEN_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Account&apos;s Most Recent DEN Contract End Date</inlineHelpText>
    <label>DEN End Date</label>
    <type>Date</type>
</CustomField>