force-app/main/default/objects/SFL5_Projects__c/fields/DEN_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DEN_Contract_Start_Date__c</fullName>
    <formula>Client__r.DEN_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Account&apos;s Most Recent DEN Contract Start Date</inlineHelpText>
    <label>DEN Start Date</label>
    <type>Date</type>
</CustomField>