force-app/main/default/objects/SFL5_Projects__c/fields/DEN_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>DEN_Contract_Status__c</fullName>
    <formula>Client__r.DEN_Stage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEN Stage</label>
    <type>Text</type>
</CustomField>