force-app/main/default/objects/SFL5_Projects__c/fields/DEN_Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>DEN_Membership_Level__c</fullName>
    <formula>Client__r.DEN_Membership_Contract_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEN Membership Level</label>
    <type>Text</type>
</CustomField>