force-app/main/default/objects/SFL5_Projects__c/fields/DEN_Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>DEN_Renewal_Status__c</fullName>
    <formula>Client__r.DEN_Renewal_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEN Renewal Status</label>
    <type>Text</type>
</CustomField>