force-app/main/default/objects/SFL5_Projects__c/fields/Description_OtherTopic__c.field-meta.xml
<CustomField>
    <fullName>Description_OtherTopic__c</fullName>
    <inlineHelpText
  >If Topic selection is &quot;Other&quot;, list the Topic(s) here.</inlineHelpText>
    <label>Topic - Other</label>
    <type>TextArea</type>
</CustomField>