force-app/main/default/objects/SFL5_Projects__c/fields/Design_Job_Order_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Design_Job_Order_Reminder__c</fullName>
    <formula>&quot;Submit Early Design Job Order if Applicable&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design Job Order Reminder</label>
    <type>Text</type>
</CustomField>