force-app/main/default/objects/SFL5_Projects__c/fields/Designed_PDF_Document__c.field-meta.xml
<CustomField>
    <fullName>Designed_PDF_Document__c</fullName>
    <label>Designed PDF Document</label>
    <type>Url</type>
</CustomField>