force-app/main/default/objects/SFL5_Projects__c/fields/Designer__c.field-meta.xml
<CustomField>
    <fullName>Designer__c</fullName>
    <label>Designer</label>
    <length>24</length>
    <type>Text</type>
</CustomField>