force-app/main/default/objects/SFL5_Projects__c/fields/DGN_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>DGN_Contract_End_Date__c</fullName>
    <formula>Client__r.DGN_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Account&apos;s Most Recent DGN Contract End Date</inlineHelpText>
    <label>DGN End Date</label>
    <type>Date</type>
</CustomField>