force-app/main/default/objects/SFL5_Projects__c/fields/DGN_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>DGN_Contract_Status__c</fullName>
    <formula>Client__r.DGN_Stage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DGN Stage</label>
    <type>Text</type>
</CustomField>