force-app/main/default/objects/SFL5_Projects__c/fields/DGN_Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>DGN_Membership_Level__c</fullName>
    <formula>Client__r.DGN_Membership_Contract_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DGN Membership Level</label>
    <type>Text</type>
</CustomField>