force-app/main/default/objects/SFL5_Projects__c/fields/DGN_Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>DGN_Renewal_Status__c</fullName>
    <formula>Client__r.DGN_Renewal_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DGN Renewal Status</label>
    <type>Text</type>
</CustomField>