force-app/main/default/objects/SFL5_Projects__c/fields/Distribution_1__c.field-meta.xml
<CustomField>
    <fullName>Distribution_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects5</relationshipName>
    <type>Lookup</type>
</CustomField>