force-app/main/default/objects/SFL5_Projects__c/fields/Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>Distribution_List__c</fullName>
    <description>List of email addresses</description>
    <inlineHelpText
  >List of email addresses who want to receive communication about this project</inlineHelpText>
    <label>Distribution List</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>