force-app/main/default/objects/SFL5_Projects__c/fields/Draft_Document__c.field-meta.xml
<CustomField>
    <fullName>Draft_Document__c</fullName>
    <label>Draft Document</label>
    <type>Url</type>
</CustomField>