force-app/main/default/objects/SFL5_Projects__c/fields/Draft_Flow_Doc_Sent__c.field-meta.xml
<CustomField>
    <fullName>Draft_Flow_Doc_Sent__c</fullName>
    <label>Draft Flow Doc Sent</label>
    <type>Date</type>
</CustomField>