force-app/main/default/objects/SFL5_Projects__c/fields/Dry_Run_Call__c.field-meta.xml
<CustomField>
    <fullName>Dry_Run_Call__c</fullName>
    <inlineHelpText>This is the date of the Dry Run Call</inlineHelpText>
    <label>Dry Run Call</label>
    <type>Date</type>
</CustomField>