force-app/main/default/objects/SFL5_Projects__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description
  >This is the original due date of the project or sub-project at the time it was created.</description>
    <inlineHelpText
  >This is the original due date of the project or sub-project at the time it was created.</inlineHelpText>
    <label>Original Due Date</label>
    <type>Date</type>
</CustomField>