force-app/main/default/objects/SFL5_Projects__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <label>Project Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Tactical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>