force-app/main/default/objects/SFL5_Projects__c/fields/Editor_Approved__c.field-meta.xml
<CustomField>
    <fullName>Editor_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Editor Approved</label>
    <type>Checkbox</type>
</CustomField>