force-app/main/default/objects/SFL5_Projects__c/fields/Editor_Approved_Design__c.field-meta.xml
<CustomField>
    <fullName>Editor_Approved_Design__c</fullName>
    <label>Editor Approved Design</label>
    <type>Date</type>
</CustomField>