force-app/main/default/objects/SFL5_Projects__c/fields/Editor_Approved_Draft__c.field-meta.xml
<CustomField>
    <fullName>Editor_Approved_Draft__c</fullName>
    <label>Editor Approved Draft</label>
    <type>Date</type>
</CustomField>