force-app/main/default/objects/SFL5_Projects__c/fields/Editor_Approved_Outline__c.field-meta.xml
<CustomField>
    <fullName>Editor_Approved_Outline__c</fullName>
    <label>Editor Approved Outline</label>
    <type>Date</type>
</CustomField>