force-app/main/default/objects/SFL5_Projects__c/fields/Editorial_Participant_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Editorial_Participant_Confirmed__c</fullName>
    <label>Editorial Participant Confirmed</label>
    <type>Date</type>
</CustomField>