force-app/main/default/objects/SFL5_Projects__c/fields/Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Email_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >This is an optional additional email recipient on the internal notifications that go out.</description>
    <inlineHelpText
  >This is an optional additional email recipient on the internal notifications that go out.</inlineHelpText>
    <label>Email Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>