force-app/main/default/objects/SFL5_Projects__c/fields/eNewsletter_Placement__c.field-meta.xml
<CustomField>
    <fullName>eNewsletter_Placement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eNewsletter Placement</label>
    <type>Checkbox</type>
</CustomField>