force-app/main/default/objects/SFL5_Projects__c/fields/Escalation_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Guidelines__c</fullName>
    <formula
  >HYPERLINK(&quot;https://bit.ly/3zX5a6P&quot;,&quot;Escalation Guidelines&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation Guidelines</label>
    <type>Text</type>
</CustomField>