force-app/main/default/objects/SFL5_Projects__c/fields/Estimated_Asset_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Asset_Receipt__c</fullName>
    <label>Estimated Asset Receipt</label>
    <type>Date</type>
</CustomField>