force-app/main/default/objects/SFL5_Projects__c/fields/Estimated_Hardware_Costs__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hardware_Costs__c</fullName>
    <label>Estimated Hardware Costs</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>