force-app/main/default/objects/SFL5_Projects__c/fields/Estimated_Hardware_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hardware_Revenue__c</fullName>
    <formula>Estimated_Hardware_Costs__c  *   Hardware_Multiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Hardware Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>