force-app/main/default/objects/SFL5_Projects__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Relate this project to an Event or Conference record.</description>
    <inlineHelpText
  >Relate this project to an Event or Conference record.</inlineHelpText>
    <label>Event</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>