force-app/main/default/objects/SFL5_Projects__c/fields/Event_Display_Title__c.field-meta.xml
<CustomField>
    <fullName>Event_Display_Title__c</fullName>
    <formula>Event__r.Display_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Display Title</label>
    <type>Text</type>
</CustomField>