force-app/main/default/objects/SFL5_Projects__c/fields/Event_Duration__c.field-meta.xml
<CustomField>
    <fullName>Event_Duration__c</fullName>
    <formula>IF(
  ISBLANK(TEXT(Event__r.Duration_minutes__c)),
  &quot;&quot;,
  TEXT( Event__r.Duration_minutes__c )&amp;&quot; minutes&quot;
)</formula>
    <label>Event Duration</label>
    <type>Text</type>
</CustomField>