force-app/main/default/objects/SFL5_Projects__c/fields/Event_Filters__c.field-meta.xml
<CustomField>
    <fullName>Event_Filters__c</fullName>
    <formula>Event__r.Filters__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Filters</label>
    <type>Text</type>
</CustomField>