force-app/main/default/objects/SFL5_Projects__c/fields/Event_Media_Landing_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_Media_Landing_Page_URL__c</fullName>
    <formula>Event__r.Media_Landing_Page_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Media Landing Page URL</label>
    <type>Text</type>
</CustomField>