force-app/main/default/objects/SFL5_Projects__c/fields/Event_Qualified_Non_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Event_Qualified_Non_Sponsor__c</fullName>
    <formula>Event__r.Qualified_Non_Sponsor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Qualified Non-Sponsor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>