force-app/main/default/objects/SFL5_Projects__c/fields/Event_Qualified_Reg__c.field-meta.xml
<CustomField>
    <fullName>Event_Qualified_Reg__c</fullName>
    <description
  >Total qualified (non-sponsor) registrations for this event</description>
    <formula>Event__r.Qualified_Leads__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Total qualified (non-sponsor) registrations for this event</inlineHelpText>
    <label>Event Qualified Reg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>