force-app/main/default/objects/SFL5_Projects__c/fields/Event_Registered_Target__c.field-meta.xml
<CustomField>
    <fullName>Event_Registered_Target__c</fullName>
    <description>This is the registration target for this event</description>
    <formula>Event__r.Registered_Target__c</formula>
    <inlineHelpText
  >This is the registration target for this event</inlineHelpText>
    <label>Event Registered Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>