force-app/main/default/objects/SFL5_Projects__c/fields/Event_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Time__c</fullName>
    <formula>TEXT(Event__r.Event_Start_Time__c)</formula>
    <label>Event Start Time</label>
    <type>Text</type>
</CustomField>