force-app/main/default/objects/SFL5_Projects__c/fields/Event_Target__c.field-meta.xml
<CustomField>
    <fullName>Event_Target__c</fullName>
    <description>This is the lead guarantee for this event</description>
    <formula>Event__r.Targeted_Registration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the lead guarantee for this event</inlineHelpText>
    <label>Event Target / Guarantee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>