force-app/main/default/objects/SFL5_Projects__c/fields/Event_Target_s_Met__c.field-meta.xml
<CustomField>
    <fullName>Event_Target_s_Met__c</fullName>
    <description
  >Compares target numbers versus actual numbers and tells if target numbers have been reached.</description>
    <formula>IF(
  OR(
    AND(
      ISPICKVAL(Event__r.Target_Type__c,&quot;Registered&quot;),
      ISBLANK(Event__r.Targeted_Registration__c),
      Event__r.Qualified_Non_Sponsor__c &gt;= Event__r.Registered_Target__c
    ),
    AND(
      ISPICKVAL(Event__r.Target_Type__c,&quot;Registered&quot;),
      Event__r.Qualified_Non_Sponsor__c &gt;= Event__r.Targeted_Registration__c
    ),
    AND(
      ISPICKVAL(Event__r.Target_Type__c,&quot;Logged On&quot;),
      Event__r.Actual_Attended_Qualified__c &gt;= Event__r.Targeted_Registration__c 
    ),
    AND(
      ISPICKVAL(Event__r.Target_Type__c,&quot;Both&quot;),
      Event__r.Qualified_Non_Sponsor__c &gt;= Event__r.Registered_Target__c,
      Event__r.Actual_Attended_Qualified__c &gt;= Event__r.Targeted_Registration__c
    )
  ),
  &quot;Target(s) Met&quot;,
  IF(
    OR(
      AND(
        ISPICKVAL(Event__r.Target_Type__c,&quot;Registered&quot;),
        ISBLANK(Event__r.Targeted_Registration__c),
        Event__r.Qualified_Non_Sponsor__c &lt; Event__r.Registered_Target__c
      ),
      AND(
        ISPICKVAL(Event__r.Target_Type__c,&quot;Registered&quot;),
        Event__r.Qualified_Non_Sponsor__c &lt; Event__r.Targeted_Registration__c
      ),
      AND(
        ISPICKVAL(Event__r.Target_Type__c,&quot;Logged On&quot;),
        Event__r.Actual_Attended_Qualified__c &lt; Event__r.Targeted_Registration__c 
      ),
      AND(
        ISPICKVAL(Event__r.Target_Type__c,&quot;Both&quot;),
        OR(
          Event__r.Qualified_Non_Sponsor__c &lt; Event__r.Registered_Target__c,
          Event__r.Actual_Attended_Qualified__c &lt; Event__r.Targeted_Registration__c
        )
      )
    ),
    &quot;Target(s) Not Met&quot;,
  &quot;Check Target Criteria&quot;
  )  
)</formula>
    <label>Event Target(s) Met</label>
    <type>Text</type>
</CustomField>