force-app/main/default/objects/SFL5_Projects__c/fields/Event_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Event_Time_Zone__c</fullName>
    <formula>TEXT(Event__r.Time_Zone__c)</formula>
    <label>Event Time Zone</label>
    <type>Text</type>
</CustomField>