force-app/main/default/objects/SFL5_Projects__c/fields/Final_Delivery_Email_Link__c.field-meta.xml
<CustomField>
    <fullName>Final_Delivery_Email_Link__c</fullName>
    <inlineHelpText
  >Link to the final delivery email saved in sFiles</inlineHelpText>
    <label>Final Delivery Email Link</label>
    <type>Url</type>
</CustomField>