force-app/main/default/objects/SFL5_Projects__c/fields/Final_Delivery_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Final_Delivery_Email_Sent__c</fullName>
    <label>Final Delivery Email Sent</label>
    <type>Date</type>
</CustomField>