force-app/main/default/objects/SFL5_Projects__c/fields/Final_Flow_Doc_Sent__c.field-meta.xml
<CustomField>
    <fullName>Final_Flow_Doc_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Flow Doc Sent</label>
    <type>Checkbox</type>
</CustomField>