force-app/main/default/objects/SFL5_Projects__c/fields/Final_Internal_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Final_Internal_Review_Completed__c</fullName>
    <inlineHelpText
  >Date received internal edits from reviewing editors</inlineHelpText>
    <label>Final Internal Review Completed</label>
    <type>Date</type>
</CustomField>