force-app/main/default/objects/SFL5_Projects__c/fields/Final_Lead_Report__c.field-meta.xml
<CustomField>
    <fullName>Final_Lead_Report__c</fullName>
    <label>Final Lead Report</label>
    <type>Url</type>
</CustomField>