force-app/main/default/objects/SFL5_Projects__c/fields/Final_PDF__c.field-meta.xml
<CustomField>
    <fullName>Final_PDF__c</fullName>
    <formula>IF(
  Final_PDF_URL__c=&quot;&quot;,&quot;&quot;,
    IF(LOWER(Final_PDF_URL__c)=&quot;needed&quot;,&quot;Still Needed&quot;,
      IF(LOWER(Final_PDF_URL__c)=&quot;unsure&quot;,&quot;Review Needed&quot;,
        IF(
          AND(
            NOT(CONTAINS(Final_PDF_URL__c, &quot;300000008tFy&quot;)),
            NOT(CONTAINS(Final_PDF_URL__c, &quot;papers&quot;)),
            NOT(CONTAINS(Final_PDF_URL__c, &quot;document&quot;)),
            NOT(CONTAINS(Final_PDF_URL__c, &quot;sharepoint&quot;))
          ),&quot;N/A&quot;,
HYPERLINK( Final_PDF_URL__c , &quot;View Final PDF&quot;)))))</formula>
    <label>Final PDF</label>
    <type>Text</type>
</CustomField>