force-app/main/default/objects/SFL5_Projects__c/fields/Final_PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>Final_PDF_URL__c</fullName>
    <description>A link to the final content piece.</description>
    <inlineHelpText
  >The &quot;Public URL&quot; hyperlink created after uploading the final content piece to this Project&apos;s &quot;Files&quot; section in Salesforce. This enables easy access to view the final content.</inlineHelpText>
    <label>Final PDF URL</label>
    <type>Url</type>
</CustomField>