force-app/main/default/objects/SFL5_Projects__c/fields/First_Proof_Received__c.field-meta.xml
<CustomField>
    <fullName>First_Proof_Received__c</fullName>
    <label>First Proof Received</label>
    <type>Date</type>
</CustomField>