force-app/main/default/objects/SFL5_Projects__c/fields/Freelancer_Contact_List__c.field-meta.xml
<CustomField>
    <fullName>Freelancer_Contact_List__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic2.sharepoint.com/:w:/t/CustomMedia/Eb6SvAwnXIxAgtgzmjOkg6UBw6rsYtsCb6D6gnjaCHk9PA?e=5zrvoe&amp;wdLOR=cC659BA01-5BB9-43E5-90C4-417B56A68860&quot;,&quot;Freelancer Contact List&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freelancer Contact List</label>
    <type>Text</type>
</CustomField>