force-app/main/default/objects/SFL5_Projects__c/fields/Govtech_URL__c.field-meta.xml
<CustomField>
    <fullName>Govtech_URL__c</fullName>
    <label>Govtech URL</label>
    <type>Url</type>
</CustomField>