force-app/main/default/objects/SFL5_Projects__c/fields/Hardware_Markup__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Markup__c</fullName>
    <label>Hardware Markup</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>