force-app/main/default/objects/SFL5_Projects__c/fields/Hardware_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Multiplier__c</fullName>
    <formula>Hardware_Markup__c  + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hardware Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>