force-app/main/default/objects/SFL5_Projects__c/fields/Hours_Completed__c.field-meta.xml
<CustomField>
    <fullName>Hours_Completed__c</fullName>
    <description
  >Sum of the total hours completed across all assignments.</description>
    <inlineHelpText
  >Sum of the total hours completed across all assignments.</inlineHelpText>
    <label>Hours Completed</label>
    <summarizedField>Project_Assignment__c.Hours_Completed__c</summarizedField>
    <summaryForeignKey>Project_Assignment__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>