force-app/main/default/objects/SFL5_Projects__c/fields/Hours_Levels__c.field-meta.xml
<CustomField>
    <fullName>Hours_Levels__c</fullName>
    <formula>TEXT(NAV_Hours_Total_Cx__c)&amp; &quot; | &quot; &amp;
IF(
AND(Client__r.DGN_Stage__c = &quot;Active&quot;,Client__r.DEN_Stage__c = &quot;Active&quot;),
Client__r.DGN_Membership_Contract_Level__c&amp;&quot; DGN | &quot;&amp;Client__r.DEN_Membership_Contract_Level__c&amp;&quot; DEN&quot;,
IF(
Client__r.DGN_Stage__c = &quot;Active&quot;,
Client__r.DGN_Membership_Contract_Level__c &amp; &quot; DGN&quot;,
IF(
Client__r.DEN_Stage__c = &quot;Active&quot;,
Client__r.DEN_Membership_Contract_Level__c &amp; &quot; DEN&quot;,
null
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >NAV Hours CY | NAV Hours Total Cx | DEN Contract Data | DGN Contract Data</inlineHelpText>
    <label>Hours &amp; Levels</label>
    <type>Text</type>
</CustomField>