force-app/main/default/objects/SFL5_Projects__c/fields/Hours_Remaining_Formula__c.field-meta.xml
<CustomField>
    <fullName>Hours_Remaining_Formula__c</fullName>
    <description
  >Number of hours remaining to complete the project.</description>
    <formula>NAV_Hours_Total_Cx__c - Total_Hours_Assigned__c
/*changed to Hours Assigned on 6/28/2021 per Ticket #31492; formerly subtracting Hours_Completed__c */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Number of hours remaining to complete the project.</inlineHelpText>
    <label>Hours Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>