force-app/main/default/objects/SFL5_Projects__c/fields/Hours_Used_Percent__c.field-meta.xml
<CustomField>
    <fullName>Hours_Used_Percent__c</fullName>
    <description
  >Total hours assigned for this project divided by the total hours completed.</description>
    <formula>Hours_Completed__c /  NAV_Hours_Total_Cx__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Total hours assigned for this project divided by the total hours completed.</inlineHelpText>
    <label>Hours Used %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>