force-app/main/default/objects/SFL5_Projects__c/fields/HubSpot_Naming_Convention__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Naming_Convention__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic2.sharepoint.com/:x:/r/sites/CommDev/Shared%20Documents/Circulation%20Share/Emails/HubSpot%20Naming%20Conventions%20for%207%20Knots.xlsx?d=wa5a9ed220b4b41f7be95688c944d4f49&amp;csf=1&amp;web=1&amp;e=L71JdI&quot;,
&quot;Build Name&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HubSpot Naming Convention</label>
    <type>Text</type>
</CustomField>