force-app/main/default/objects/SFL5_Projects__c/fields/Identified_List_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Identified_List_Criteria__c</fullName>
    <label>Identified List Criteria</label>
    <type>Date</type>
</CustomField>