force-app/main/default/objects/SFL5_Projects__c/fields/Importance__c.field-meta.xml
<CustomField>
    <fullName>Importance__c</fullName>
    <description
  >This is the scale of relative importance of the project. It is a 5 point relative scale ranging from 1 as the lowest importance to 5 as the highest importance.</description>
    <inlineHelpText
  >This is the scale of relative importance of the project. It is a 5 point relative scale ranging from 1 as the lowest importance to 5 as the highest importance.</inlineHelpText>
    <label>Importance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>