force-app/main/default/objects/SFL5_Projects__c/fields/Impressions_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Impressions_Purchased__c</fullName>
    <label>Impressions Purchased</label>
    <length>80</length>
    <type>Text</type>
</CustomField>