force-app/main/default/objects/SFL5_Projects__c/fields/Initial_Estimate_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Initial_Estimate_of_Hours__c</fullName>
    <description
  >Estimate of how many hours it will take to complete the project.</description>
    <inlineHelpText
  >Estimate of how many hours it will take to complete the project.</inlineHelpText>
    <label>Initial Estimate of Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>