force-app/main/default/objects/SFL5_Projects__c/fields/Integrated__c.field-meta.xml
<CustomField>
    <fullName>Integrated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
  >Projects that are integrated with another department (i.e. Content Studio and Research)</inlineHelpText>
    <label>Integrated Project</label>
    <type>Checkbox</type>
</CustomField>