force-app/main/default/objects/SFL5_Projects__c/fields/Internal_External__c.field-meta.xml
<CustomField>
    <fullName>Internal_External__c</fullName>
    <description
  >This area indicates if the project is for ourselves, i.e. RAD (Internal), such as Professional Development, an e.Republic division (Support), such as Governing or GovTech, or if the project is for a private sector client (External).</description>
    <inlineHelpText>Internal = for our own department (RAD)
Support = for another e.Republic business unit
External = for a paying client</inlineHelpText>
    <label>Internal / External</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>