force-app/main/default/objects/SFL5_Projects__c/fields/Interview_Call_Invite__c.field-meta.xml
<CustomField>
    <fullName>Interview_Call_Invite__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic2.sharepoint.com/:w:/t/CustomMedia/EUDkVsIXov5MhXSIihIdG0IBfEYqCCVBH4Aulo1-N1OnLA?e=dQT53T&amp;wdLOR=c8BD57BFA-A4CF-49A7-921D-95839690A9B8&quot;,&quot;Sample SME/Public Sector Interview Call Invite&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interview Call Invite</label>
    <type>Text</type>
</CustomField>