force-app/main/default/objects/SFL5_Projects__c/fields/Interview_Recording_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Interview_Recording_Reminder__c</fullName>
    <formula>&quot;Upload MP4 to SharePoint&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interview Recording Reminder</label>
    <type>Text</type>
</CustomField>