force-app/main/default/objects/SFL5_Projects__c/fields/Interview_Request_Email__c.field-meta.xml
<CustomField>
    <fullName>Interview_Request_Email__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic2.sharepoint.com/:w:/t/CustomMedia/EZkPGPYLDOxCtSFaGQO5XPwB7L-nufCgp78yiDbNqIwmLQ?e=9cf5OS&amp;wdLOR=c0036600D-6D9B-4ACA-A721-AD1C7F714B95&quot;,&quot;Sample SME/Public Sector Interview Request&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interview Request Email</label>
    <type>Text</type>
</CustomField>