force-app/main/default/objects/SFL5_Projects__c/fields/Is_Project_Analyst_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Project_Analyst_Current_User__c</fullName>
    <formula>IF($User.Id = Project_Analyst__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Project Analyst Current User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>